added state vars, DOMs, init, setBoard, working on generateMineField

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <h1 id="title">Minesweeper</h1>
         <ul>
-            <li id="flags">Mines remaining: 10</li>
-            <li id="winResult"></li>
-            <li id="reset">
-                <button>Reset</button>
+            <li id="minesRemaining">Mines remaining: 10</li>
+            <li id="results"></li>
+            <li >
+                <button id="reset">Reset</button>
             </li>
         </ul>
     </header>
