--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,20 +9,33 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
 </head>
+
 <body>
     <header>
         <h1 id="title">Minesweeper</h1>
         <ul>
             <li id="minesRemaining">Mines remaining: 10</li>
             <li id="results"></li>
-            <li >
+            <li>
                 <button id="reset">Reset</button>
             </li>
         </ul>
     </header>
     <main>
-        <div class="board"></div>
+        <div class="board">
+            <section id="boardButtons">
+                <button id ="0"></button><button id ="1"></button><button id ="2"></button><button id ="3"></button><button id ="4"></button><button id ="5"></button><button id ="6"></button><button id ="7"></button>
+                <button id ="8"></button><button id ="9"></button><button id ="10"></button><button id ="11"></button><button id ="12"></button><button id ="13"></button><button id ="14"></button><button id ="15"></button>
+                <button id ="16"></button><button id ="17"></button><button id ="18"></button><button id ="19"></button><button id ="20"></button><button id ="21"></button><button id ="22"></button><button id ="23"></button>
+                <button id ="24"></button><button id ="25"></button><button id ="26"></button><button id ="27"></button><button id ="28"></button><button id ="29"></button><button id ="30"></button><button id ="31"></button>
+                <button id ="32"></button><button id ="33"></button><button id ="34"></button><button id ="35"></button><button id ="36"></button><button id ="37"></button><button id ="38"></button><button id ="39"></button>
+                <button id ="40"></button><button id ="41"></button><button id ="42"></button><button id ="43"></button><button id ="44"></button><button id ="45"></button><button id ="46"></button><button id ="47"></button>
+                <button id ="48"></button><button id ="49"></button><button id ="50"></button><button id ="51"></button><button id ="52"></button><button id ="53"></button><button id ="54"></button><button id ="55"></button>
+                <button id ="56"></button><button id ="57"></button><button id ="58"></button><button id ="59"></button><button id ="60"></button><button id ="61"></button><button id ="62"></button><button id ="63"></button>
+            </section>
+        </div>
         <!-- <button class="grid"></button> -->
     </main>
 </body>
+
 </html>
