final iteration of empty button function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1 id="title">Minesweeper</h1>
         <ul>
-            <li id="minesRemaining">Mines remaining: 10</li>
+            <!-- <li id="minesRemaining">Mines remaining: 10</li> -->
             <li id="results"></li>
             <li>
                 <button id="reset">Reset</button>
